- implemented Serializable Track Objects with a new java class TrackSerializable. -Now the user's track metadata can be saved and read from a file, greatly improving app load times
TODO:
=> playlist (string - playlistname in listview, playlisttable in tableview)
=> Spotify API implementation?
=> find in explorer ?, more context menu options
=> keybinds (space for play/pause etc)